--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("../../assets/img-contact/sfondo.png");
+  background: url("../../assets/img-contact/sfondo.jpg");
   background-size: cover;
   height: 550px;
   padding: 10em;
