--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,5 +1,5 @@
 .h-bg {
-  background: url("../../assets/img-home/home-sfondo.png");
+  background: url("../../assets/img-home/sfondo.jpg");
   background-size: cover;
   height: 650px;
   display: flex;
@@ -8,7 +8,7 @@
   z-index: -1;
 }
 .h-top {
-  margin-top: 200px;
+  margin-top: 150px;
   padding: 20px;
   color: white;
 }
@@ -16,7 +16,7 @@
   max-width: 300px;
 }
 .h-top p {
-  padding: 20px 25%;
+  padding: 20px 15%;
 }
 .h-top-button {
   margin-top: 50px;
@@ -27,7 +27,7 @@
   color: black; /* Set the text color to green */
   padding: 15px 70px;
   border-radius: 30px;
-  background-color: #4fde4f; /* Set the initial background to transparent */
+  background-color: #56a635; /* Set the initial background to transparent */
   transition: background-color 0.3s, color 0.3s;
 }
 .h-top-button a:hover {
@@ -37,7 +37,8 @@
 }
 /* Carosello */
 .h-carosello {
-  padding: 3em;
+  padding-top: 3em;
+  margin-bottom: 5em;
 }
 .h-carosello img {
   margin-top: 30px;
@@ -52,15 +53,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 3%;
-  padding: 0 10%;
-  gap: 10px;
+  padding: 20px 10% 100px 10%;
+  gap: 100px;
 }
 .h-quality-left {
-  flex: 1;
+  flex: 3;
+  align-items: left;
 }
 .h-quality-right {
-  flex: 4;
+  flex: 1;
+}
+.h-quality-right img {
+  height: 250px;
 }
 .h-title {
   color: var(--light-green);
@@ -72,8 +76,10 @@
   flex-direction: column;
   justify-content: center;
   background-color: var(--dark-green);
+  background: url("../../assets/img-home/Sfondo_più_venduti.jpeg");
+  background-size: cover;
   color: white;
-  padding-top: 20px;
+  padding: 50px 0 80px 0;
   align-items: center;
 }
 .h-bestSellers-header {
@@ -82,8 +88,8 @@
 .h-product-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px; /* Space between cards */
-  margin: 50px 180px;
+  grid-gap: 40px; /* Space between cards */
+  margin: 50px 8%;
   color: black;
 }
 
@@ -119,7 +125,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: url("../../assets/img-home/sfondo-analysis.png");
+  background: url("../../assets/img-home/sfondoanalisi.jpg");
   background-size: cover;
   margin: 0;
   padding: 5% 10%;
@@ -131,10 +137,14 @@
 }
 .h-analysis-types {
   display: flex;
-  gap: 15%;
+  gap: 5%;
+}
+.h-analysis-types p {
+  text-align: left;
 }
 .h-analysis-left,
-.h-analysis-right {
+.h-analysis-right,
+.h-analysis-center {
   flex: 1;
   margin: 20px 0;
   padding: 35px;
@@ -143,6 +153,13 @@
 
 /* Responsive design: Stacks blocks on smaller screens */
 @media (max-width: 768px) {
+  p {
+    font-size: 13px;
+    text-align: left;
+  }
+  .h-top {
+    margin-top: 100px;
+  }
   .h-top p {
     padding: 20px 10%;
   }
@@ -151,7 +168,7 @@
   }
   .h-product-grid {
     grid-template-columns: repeat(1, 1fr);
-    margin: 40px 80px;
+    margin: 40px 40px;
   }
   .h-priceShipTags {
     flex-direction: column;
@@ -164,5 +181,8 @@
   }
   .h-analysis-types {
     flex-direction: column;
+  }
+  .h-carosello {
+    display: none;
   }
 }
